--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-deploy",
+  "homepage": "http://shannonsimpson.github.io/react-deploy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
